add style of investCard

--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
-<html lang="es" >
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - A Pen by  Miller Correa</title>
+  <meta charset="utf-8">
+  <title>Ahorro Mockup</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div id="AppMockup">
-  <div>
+<div id="Home" class="container-fluid">
+  <div class="row">
+    <nav class="col navbar ">
+      <h1 class="title_v2">Hola, Camila</h1>		
+      <img  id="bell" src="./icons/notifications_24px.svg" alt="Bell">
+    </nav>
     
   </div>
-	<nav class="col-12 navbar navbar-light bg-light">
-		<h1 class="title_v2">Hola, Camila</h1>		
-		<img  id="bell" src="./icons/notifications_24px.svg" alt="Bell">
-	</nav>
-
+  <div class="row">
+    <div id="InvestCard" class="col ">
+      <img src="./images/IMG.png" alt="Mujer Sentada">
+      <div id="ValueCard">
+        <div id="ValueProfile">
+          Eres estratega
+        </div>
+        <div id="Value">
+          <div class="ValueTitle">Tu Saldo</div>
+          <div id="ValueAmount">
+              $1.570.000
+          </div>
+        </div>
+      </div>
+      
+    </div>
+  </div>
 </div>
+
+
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
 </body>
