add Style of InvestSummary

--- a/index.html
+++ b/index.html
@@ -1,41 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Ahorro Mockup</title>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<div id="Home" class="container-fluid">
-  <div class="row">
-    <nav class="col navbar ">
-      <h1 class="title_v2">Hola, Camila</h1>		
-      <img  id="bell" src="./icons/notifications_24px.svg" alt="Bell">
-    </nav>
-    
-  </div>
-  <div class="row">
-    <div id="InvestCard" class="col ">
-      <img src="./images/IMG.png" alt="Mujer Sentada">
-      <div id="ValueCard">
-        <div id="ValueProfile">
-          Eres estratega
-        </div>
-        <div id="Value">
-          <div class="ValueTitle">Tu Saldo</div>
-          <div id="ValueAmount">
-              $1.570.000
+<html>
+  <head>
+    <title>Ahorro Mockup</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+
+  <body>
+    <!-- partial:index.partial.html -->
+    <div id="Home" class="container-fluid">
+      <div class="row">
+        <nav class="col navbar">
+          <h1 class="title_v2">Hola, Camila</h1>
+          <img id="bell" src="./icons/notifications_24px.svg" alt="Bell" />
+        </nav>
+      </div>
+
+      <div class="row">
+        <div id="InvestCard" class="col">
+          <img src="./images/IMG.png" alt="Mujer Sentada" />
+          <div id="ValueCard">
+            <div id="ValueProfile">
+              Eres estratega
+            </div>
+            <div id="Value">
+              <div class="ValueTitle">Tu Saldo</div>
+              <div id="ValueAmount">
+                $1.570.000
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      
+
+      <div class="row">
+        <div id="InvestSummary"  class="col">
+          <div class="row justify-content-between">
+            <div class="col">Inversión</div>
+            <div class="col text-right">$1.600.000</div>
+          </div>
+          <hr />
+          <div class="row justify-content-between ">
+            <div class="col">Rendimiento</div>
+            <div class="col text-right">-$30.000</div>
+          </div>
+        </div>
+      </div>
+
+
+
     </div>
-  </div>
-</div>
 
-
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha1/js/bootstrap.min.js'></script>
-</body>
+    <!-- partial -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
+  </body>
 </html>
