--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <nav class="col navbar">
           <h1 class="title_v2">Hola, Camila</h1>
-          <img id="bell" src="./icons/notifications_24px.svg" alt="Bell" />
+          <img class="icon" src="./icons/notifications_24px.svg" alt="Bell" />
         </nav>
       </div>
 
@@ -24,7 +24,9 @@
           <img src="./images/IMG.png" alt="Mujer Sentada" />
           <div id="ValueCard">
             <div id="ValueProfile">
-              Eres estratega
+              Eres
+              <br>
+              estratega
             </div>
             <div id="Value">
               <div class="ValueTitle">Tu Saldo</div>
@@ -50,6 +52,12 @@
         </div>
       </div>
 
+      <div class="row">
+        <nav class="col navbar">
+          <h1 class="title_v2">Tus Metas</h1>
+          <img class="icon" src="./icons/add_circle_outline_24px.png" alt="Add Icon" />
+        </nav>
+      </div>
 
 
     </div>
