add goals card without progress circular loader

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
   <body>
@@ -21,7 +21,7 @@
 
       <div class="row">
         <div id="InvestCard" class="col">
-          <img src="./images/IMG.png" alt="Mujer Sentada" />
+          <img src="./images/Profile.png" alt="Mujer Sentada" />
           <div id="ValueCard">
             <div id="ValueProfile">
               Eres
@@ -58,6 +58,23 @@
           <img class="icon" src="./icons/add_circle_outline_24px.png" alt="Add Icon" />
         </nav>
       </div>
+
+      <div id="goals" class="row">
+        <div class="col card">
+          <img src="./images/Beach.png" alt="Iconbeach" >
+          <div class="card-body">
+            Viaje a Islas Canarias
+          </div>
+        </div>
+        <div class="col card">
+          <img src="./images/Computer.png" alt="Computer" >
+          <div class="card-body">
+            MacBook Pro
+          </div>
+        </div>
+
+      </div>
+
 
 
     </div>
