add style of HoldingDescription without interaction

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>Ahorro Mockup</title>
-    <meta name="viewport" initial-scale=0.5>
+    <meta name="viewport" initial-scale="0.5" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
     />
+
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
@@ -17,17 +18,17 @@
       <div class="row">
         <nav class="col navbar">
           <h1 class="title_v2">Hola, Camila</h1>
-          <img class="icon" src="./icons/notifications_24px.svg" alt="Bell" />
+          <img class="icon" src="./icons/navigation/notifications_24px.svg" alt="Bell" />
         </nav>
       </div>
 
-      <div  class="row ">
-        <div id="InvestCard"  class="generalCard col">
+      <div class="row">
+        <div id="InvestCard" class="generalCard col">
           <img src="./images/Profile.png" alt="Mujer Sentada" />
           <div id="ValueCard">
             <div id="ValueProfile">
               Eres
-              <br>
+              <br />
               estratega
             </div>
             <div id="Value">
@@ -40,14 +41,14 @@
         </div>
       </div>
 
-      <div class="row ">
-        <div id="InvestSummary"  class="col generalCard">
+      <div class="row">
+        <div id="InvestSummary" class="col generalCard">
           <div class="row justify-content-between">
             <div class="col">Inversión</div>
             <div class="col text-right">$1.600.000</div>
           </div>
           <hr />
-          <div class="row justify-content-between ">
+          <div class="row justify-content-between">
             <div class="col">Rendimiento</div>
             <div class="col text-right">-$30.000</div>
           </div>
@@ -57,24 +58,27 @@
       <div class="row">
         <nav class="col navbar">
           <h1 class="title_v2">Tus Metas</h1>
-          <img class="icon" src="./icons/add_circle_outline_24px.png" alt="Add Icon" />
+          <img
+            class="icon"
+            src="./icons/navigation/add_circle_outline_24px.png"
+            alt="Add Icon"
+          />
         </nav>
       </div>
 
       <div id="goals" class="row">
         <div class="col card generalCard">
-          <img src="./images/Beach.png" alt="Iconbeach" >
+          <img src="./images/Beach.png" alt="Iconbeach" />
           <div class="card-body">
             Viaje a Islas Canarias
           </div>
         </div>
         <div class="col card generalCard">
-          <img src="./images/Computer.png" alt="Computer" >
+          <img src="./images/Computer.png" alt="Computer" />
           <div class="card-body">
             MacBook Pro
           </div>
         </div>
-
       </div>
 
       <!-- Portfolio View -->
@@ -86,13 +90,41 @@
         </nav>
       </div>
 
-
       <div id="portfolioView" class="row generalCard">
-        Tu dinero se invierte de la forma más eficiente de acuerdo al perfil de riesgo asignado por nuestro RoboAdvisor.
+        <div id="HoldingDonut" class="col-5">
+          <!-- Donnut Using Chart.js is Know like a Pie -->
+        </div>
+        <div id="HoldingDescription" class="col-7">
+          <img src="./images/logoFIC.png" alt="Logo Skandia" />
+          <span class="badge badge-success">15%</span>
+          <div class="caption1">FIC Old Mutual Efectivo</div>
+          <div class="caption1">
+            <b>$240.000</b> 
+          </div>
+          <div class="menu2">
+            Tipo de activo
+          </div>
+          <p >
+            Renta fija 
+            <br>
+            Depósito a la fija 
+          </p>
+          <div id="controls" class="row justify-content-between ">
+            <a href="#" class="col-4 previous round text-center">
+              <img src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
+            </a>
+            <a href="#" class="col-4 next round text-center">
+              <img class="flipped" src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
+            </a>
+          </div>
+        </div>
+        <!-- Breack  -->
+        <div class="w-100"></div>
+        <p>
+          Tu dinero se invierte de la forma más eficiente de acuerdo al perfil
+          de riesgo asignado por nuestro RoboAdvisor.
+        </p>
       </div>
-
-
-
     </div>
 
     <!-- partial -->
