--- a/index.html
+++ b/index.html
@@ -1,133 +1,171 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Ahorro Mockup</title>
-    <meta name="viewport" initial-scale="0.5" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
-    />
 
-    <link rel="stylesheet" href="./styles/style.css" />
-  </head>
+<head>
+  <title>Ahorro Mockup</title>
+  <meta name="viewport" initial-scale="0.5" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
 
-  <body>
-    <!-- partial:index.partial.html -->
+  <link rel="stylesheet" href="./styles/style.css" />
+</head>
 
-    <div id="Home" class="container-fluid">
-      <div class="row">
-        <nav class="col navbar">
-          <h1 class="title_v2">Hola, Camila</h1>
-          <img class="icon" src="./icons/navigation/notifications_24px.svg" alt="Bell" />
-        </nav>
-      </div>
+<body>
+  <!-- partial:index.partial.html -->
 
-      <div class="row">
-        <div id="InvestCard" class="generalCard col">
-          <img src="./images/Profile.png" alt="Mujer Sentada" />
-          <div id="ValueCard">
-            <div id="ValueProfile">
-              Eres
-              <br />
-              estratega
-            </div>
-            <div id="Value">
-              <div class="ValueTitle">Tu Saldo</div>
-              <div id="ValueAmount">
-                $1.570.000
-              </div>
+  <div id="Home" class="container-fluid">
+    <div class="row">
+      <nav class="col navbar">
+        <h1 class="title_v2">Hola, Camila</h1>
+        <img class="icon" src="./icons/navigation/notifications_24px.svg" alt="Bell" />
+      </nav>
+    </div>
+
+    <div class="row">
+      <div id="InvestCard" class="generalCard col">
+        <img src="./images/Profile.png" alt="Mujer Sentada" />
+        <div id="ValueCard">
+          <div id="ValueProfile">
+            Eres
+            <br />
+            estratega
+          </div>
+          <div id="Value">
+            <div class="ValueTitle">Tu Saldo</div>
+            <div id="ValueAmount">
+              $1.570.000
             </div>
           </div>
         </div>
-      </div>
-
-      <div class="row">
-        <div id="InvestSummary" class="col generalCard">
-          <div class="row justify-content-between">
-            <div class="col">Inversión</div>
-            <div class="col text-right">$1.600.000</div>
-          </div>
-          <hr />
-          <div class="row justify-content-between">
-            <div class="col">Rendimiento</div>
-            <div class="col text-right">-$30.000</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <nav class="col navbar">
-          <h1 class="title_v2">Tus Metas</h1>
-          <img
-            class="icon"
-            src="./icons/navigation/add_circle_outline_24px.png"
-            alt="Add Icon"
-          />
-        </nav>
-      </div>
-
-      <div id="goals" class="row">
-        <div class="col card generalCard">
-          <img src="./images/Beach.png" alt="Iconbeach" />
-          <div class="card-body">
-            Viaje a Islas Canarias
-          </div>
-        </div>
-        <div class="col card generalCard">
-          <img src="./images/Computer.png" alt="Computer" />
-          <div class="card-body">
-            MacBook Pro
-          </div>
-        </div>
-      </div>
-
-      <!-- Portfolio View -->
-
-      <div id="portfolioTitle" class="row">
-        <nav class="col navbar">
-          <h1 class="title_v2">Conoce tu portafolio</h1>
-          <span class="badge badge-success">Estratega</span>
-        </nav>
-      </div>
-
-      <div id="portfolioView" class="row generalCard">
-        <div id="HoldingDonut" class="col-5">
-          <!-- Donnut Using Chart.js is Know like a Pie -->
-        </div>
-        <div id="HoldingDescription" class="col-7">
-          <img src="./images/logoFIC.png" alt="Logo Skandia" />
-          <span class="badge badge-success">15%</span>
-          <div class="caption1">FIC Old Mutual Efectivo</div>
-          <div class="caption1">
-            <b>$240.000</b> 
-          </div>
-          <div class="menu2">
-            Tipo de activo
-          </div>
-          <p >
-            Renta fija 
-            <br>
-            Depósito a la fija 
-          </p>
-          <div id="controls" class="row justify-content-between ">
-            <a href="#" class="col-4 previous round text-center">
-              <img src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
-            </a>
-            <a href="#" class="col-4 next round text-center">
-              <img class="flipped" src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
-            </a>
-          </div>
-        </div>
-        <!-- Breack  -->
-        <div class="w-100"></div>
-        <p>
-          Tu dinero se invierte de la forma más eficiente de acuerdo al perfil
-          de riesgo asignado por nuestro RoboAdvisor.
-        </p>
       </div>
     </div>
 
-    <!-- partial -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
-  </body>
+    <div class="row">
+      <div id="InvestSummary" class="col generalCard">
+        <div class="row justify-content-between">
+          <div class="col">Inversión</div>
+          <div class="col text-right">$1.600.000</div>
+        </div>
+        <hr />
+        <div class="row justify-content-between">
+          <div class="col">Rendimiento</div>
+          <div class="col text-right">-$30.000</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <nav class="col navbar">
+        <h1 class="title_v2">Tus Metas</h1>
+        <img class="icon" src="./icons/navigation/add_circle_outline_24px.png" alt="Add Icon" />
+      </nav>
+    </div>
+
+    <div id="goals" class="row">
+      <div class="col card generalCard">
+        <img src="./images/Beach.png" alt="Iconbeach" />
+        <div class="card-body">
+          Viaje a Islas Canarias
+        </div>
+      </div>
+      <div class="col card generalCard">
+        <img src="./images/Computer.png" alt="Computer" />
+        <div class="card-body">
+          MacBook Pro
+        </div>
+      </div>
+    </div>
+
+    <!-- Portfolio View -->
+
+    <div id="portfolioTitle" class="row">
+      <nav class="col navbar">
+        <h1 class="title_v2">Conoce tu portafolio</h1>
+        <span class="badge badge-success">Estratega</span>
+      </nav>
+    </div>
+
+    <div id="portfolioView" class="row generalCard">
+      <div id="HoldingDonut" class="col-5">
+        <!-- Donnut Using Chart.js is Know like a Pie -->
+      </div>
+      <div id="HoldingDescription" class="col-7">
+        <img src="./images/logoFIC.png" alt="Logo Skandia" />
+        <span class="badge badge-success">15%</span>
+        <div class="caption1">FIC Old Mutual Efectivo</div>
+        <div class="caption1">
+          <b>$240.000</b>
+        </div>
+        <div class="menu2">
+          Tipo de activo
+        </div>
+        <p>
+          Renta fija
+          <br>
+          Depósito a la fija
+        </p>
+        <div id="controls" class="row justify-content-between ">
+          <a href="#" class="col-4 previous round text-center">
+            <img src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
+          </a>
+          <a href="#" class="col-4 next round text-center">
+            <img class="flipped" src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
+          </a>
+        </div>
+      </div>
+      <!-- Breack  -->
+      <div class="w-100"></div>
+      <p>
+        Tu dinero se invierte de la forma más eficiente de acuerdo al perfil
+        de riesgo asignado por nuestro RoboAdvisor.
+      </p>
+    </div>
+
+    <div class="row">
+      
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+  
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="./images/thumb.png" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>..asd.</h5>
+              <p>...</p>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <img class="d-block w-100"  src="./images/thumb.png" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>..asd.</h5>
+              <p>...</p>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <img class="d-block w-100"   src="./images/thumb.png" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>..asd.</h5>
+              <p>...</p>
+            </div>
+          </div>
+  
+        </div>
+      </div>
+    </div>
+
+
+
+  </div>
+
+  <!-- partial -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/javascript.util/0.12.12/javascript.util.min.js"
+    integrity="sha512-oHBLR38hkpOtf4dW75gdfO7VhEKg2fsitvHZYHZjObc4BPKou2PGenyxA5ZJ8CCqWytBx5wpiSqwVEBy84b7tw=="
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
