blogCard style add

--- a/index.html
+++ b/index.html
@@ -125,6 +125,42 @@
           de riesgo asignado por nuestro RoboAdvisor.
         </p>
       </div>
+
+
+      <div id="blog" class="row">
+        <div class="generalCard">
+          <ul class="list-unstyled">
+            <li class="media">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">10 gastos que debes evitar</h5>
+                <p class="menu1">
+                  Aunque el 66% de los adultos recibió educación para el ahorro, apenas el 44% ahorra de manera fomal.
+                </p>
+              </div>
+              <img class="ml-5"  src="./images/blog1.png" alt="Mano sacando dolares de la billetera frente al computador">
+            </li>
+            <hr>
+            <li class="media my-4">
+              <div class="media-body">
+                <h5 class="mt-0 mb-1">10 gastos que debes evitar</h5>
+                <p class="menu1">
+                  Aunque el 66% de los adultos recibió educación para el ahorro, apenas el 44% ahorra de manera fomal.
+                </p>
+              </div>
+              <img class="ml-5"  src="./images/blog2.png" alt="Manos estrechadas con guantes">
+            </li>
+            <hr>
+            <li class="media">
+              <div class="media-body mr-6">
+                <h5 class="mt-0 mb-1">10 gastos que debes evitar</h5>
+                <p class="menu1 ">
+                  Aunque el 66% de los adultos recibió educación para el ahorro, apenas el 44% ahorra de manera fomal.
+                </p>  
+              </div>
+              <img class="ml-5" src="./images/blog3.png" alt="Mano entregando tarjeta de credito mastercard">
+            </li>
+          </ul>
+        </div>
     </div>
 
     <!-- partial -->
