--- a/index.html
+++ b/index.html
@@ -1,169 +1,211 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Ahorro Mockup</title>
-    <meta name="viewport" initial-scale="0.5"/>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css"
-    />
 
-    <link rel="stylesheet" href="./styles/style.css" />
-  </head>
+<head>
+  <title>Ahorro Mockup</title>
+  <meta name="viewport" initial-scale="0.5" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
 
-  <body>
-    <!-- partial:index.partial.html -->
+  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./styles/menu.css" />
 
-    <div id="Home" class="container-fluid">
-      <div class="row">
-        <nav class="col navbar">
-          <h1 class="title_v2">Hola, Camila</h1>
-          <img class="icon" src="./icons/navigation/notifications_24px.svg" alt="Bell" />
-        </nav>
+</head>
+
+<body>
+  <!-- Menu Fixed with Notch -->
+  <div id="boom">
+    <!-- Notch -->
+    <div id="menu-notch">
+    </div>
+    <div id="add-button">
+    </div>
+    <!-- end of Notch -->
+    <div id="menu-overlay">
+      
+      <div id="div-0" class="divition menu1">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Gnome-home.svg/60px-Gnome-home.svg.png"
+          alt="">
+        <br>
+        Inicio
       </div>
 
-      <div class="row">
-        <div id="InvestCard" class="generalCard col">
-          <img src="./images/Profile.png" alt="Mujer Sentada" />
-          <div id="ValueCard">
-            <div id="ValueProfile">
-              Eres
-              <br />
-              estratega
+      <div id="div-1" class="divition menu1">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Gnome-home.svg/60px-Gnome-home.svg.png"
+          alt="">
+        <br>
+        Historial
+      </div>
+
+      <div id="div-2" class="divition menu1">
+        Ahorrar
+      </div>
+
+      <div id="div-3" class="divition menu1">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Gnome-home.svg/60px-Gnome-home.svg.png"
+          alt="">
+        <br>
+        Mi perfil
+      </div>
+
+      <div id="div-4" class="divition menu1">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Gnome-home.svg/60px-Gnome-home.svg.png"
+          alt="">
+        <br>
+        Más
+      </div>
+
+    </div>
+  </div>
+
+  <!-- End Of Menu -->
+
+  <div id="Home" class="container-fluid">
+    <div class="row">
+      <nav class="col navbar">
+        <h1 class="title_v2">Hola, Camila</h1>
+        <img class="icon" src="./icons/navigation/notifications_24px.svg" alt="Bell" />
+      </nav>
+    </div>
+
+    <div class="row">
+      <div id="InvestCard" class="generalCard col">
+        <img src="./images/Profile.png" alt="Mujer Sentada" />
+        <div id="ValueCard">
+          <div id="ValueProfile">
+            Eres
+            <br />
+            estratega
+          </div>
+          <div id="Value">
+            <div class="ValueTitle">Tu Saldo</div>
+            <div id="ValueAmount">
+              $1.570.000
             </div>
-            <div id="Value">
-              <div class="ValueTitle">Tu Saldo</div>
-              <div id="ValueAmount">
-                $1.570.000
-              </div>
-            </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="row">
-        <div id="InvestSummary" class="col generalCard">
-          <div class="row justify-content-between">
-            <div class="col">Inversión</div>
-            <div class="col text-right">$1.600.000</div>
-          </div>
-          <hr />
-          <div class="row justify-content-between">
-            <div class="col">Rendimiento</div>
-            <div class="col text-right">-$30.000</div>
-          </div>
+    <div class="row">
+      <div id="InvestSummary" class="col generalCard">
+        <div class="row justify-content-between">
+          <div class="col">Inversión</div>
+          <div class="col text-right">$1.600.000</div>
+        </div>
+        <hr />
+        <div class="row justify-content-between">
+          <div class="col">Rendimiento</div>
+          <div class="col text-right">-$30.000</div>
         </div>
       </div>
+    </div>
 
-      <div class="row">
-        <nav class="col navbar">
-          <h1 class="title_v2">Tus Metas</h1>
-          <img
-            class="icon"
-            src="./icons/navigation/add_circle_outline_24px.png"
-            alt="Add Icon"
-          />
-        </nav>
-      </div>
+    <div class="row">
+      <nav class="col navbar">
+        <h1 class="title_v2">Tus Metas</h1>
+        <img class="icon" src="./icons/navigation/add_circle_outline_24px.png" alt="Add Icon" />
+      </nav>
+    </div>
 
-      <div id="goals" class="row">
-        <div class="col card generalCard">
-          <img src="./images/Beach.png" alt="Iconbeach" />
-          <div class="card-body">
-            Viaje a Islas Canarias
-          </div>
-        </div>
-        <div class="col card generalCard">
-          <img src="./images/Computer.png" alt="Computer" />
-          <div class="card-body">
-            MacBook Pro
-          </div>
+    <div id="goals" class="row">
+      <div class="col card generalCard">
+        <img src="./images/Beach.png" alt="Iconbeach" />
+        <div class="card-body">
+          Viaje a Islas Canarias
         </div>
       </div>
-
-      <!-- Portfolio View -->
-
-      <div id="portfolioTitle" class="row">
-        <nav class="col navbar">
-          <h1 class="title_v2">Conoce tu portafolio</h1>
-          <span class="badge badge-success">Estratega</span>
-        </nav>
+      <div class="col card generalCard">
+        <img src="./images/Computer.png" alt="Computer" />
+        <div class="card-body">
+          MacBook Pro
+        </div>
       </div>
+    </div>
 
-      <div id="portfolioView" class="row generalCard">
-        <div id="HoldingDonut" class="col-5">
-          <!-- Donnut Using Chart.js is Know like a Pie -->
+    <!-- Portfolio View -->
+
+    <div id="portfolioTitle" class="row">
+      <nav class="col navbar">
+        <h1 class="title_v2">Conoce tu portafolio</h1>
+        <span class="badge badge-success">Estratega</span>
+      </nav>
+    </div>
+
+    <div id="portfolioView" class="row generalCard">
+      <div id="HoldingDonut" class="col-5">
+        <!-- Donnut Using Chart.js is Know like a Pie -->
+      </div>
+      <div id="HoldingDescription" class="col-7">
+        <img src="./images/logoFIC.png" alt="Logo Skandia" />
+        <span class="badge badge-success">15%</span>
+        <div class="caption1">FIC Old Mutual Efectivo</div>
+        <div class="caption1">
+          <b>$240.000</b>
         </div>
-        <div id="HoldingDescription" class="col-7">
-          <img src="./images/logoFIC.png" alt="Logo Skandia" />
-          <span class="badge badge-success">15%</span>
-          <div class="caption1">FIC Old Mutual Efectivo</div>
-          <div class="caption1">
-            <b>$240.000</b> 
-          </div>
-          <div class="menu2">
-            Tipo de activo
-          </div>
-          <p >
-            Renta fija 
-            <br>
-            Depósito a la fija 
-          </p>
-          <div id="controls" class="row justify-content-between ">
-            <a href="#" class="col-4 previous round text-center">
-              <img src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
-            </a>
-            <a href="#" class="col-4 next round text-center">
-              <img class="flipped" src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
-            </a>
-          </div>
+        <div class="menu2">
+          Tipo de activo
         </div>
-        <!-- Breack  -->
-        <div class="w-100"></div>
         <p>
-          Tu dinero se invierte de la forma más eficiente de acuerdo al perfil
-          de riesgo asignado por nuestro RoboAdvisor.
+          Renta fija
+          <br>
+          Depósito a la fija
         </p>
-      </div>
-
-
-      <div id="blog" class="row">
-        <div class="generalCard">
-          <ul class="list-unstyled">
-            <li class="media">
-              <div class="media-body">
-                <h5 class="mt-0 mb-1">10 gastos que debes evitar</h5>
-                <p class="menu1">
-                  Aunque el 66% de los adultos recibió educación para el ahorro, apenas el 44% ahorra de manera fomal.
-                </p>
-              </div>
-              <img class="ml-5"  src="./images/blog1.png" alt="Mano sacando dolares de la billetera frente al computador">
-            </li>
-            <hr>
-            <li class="media my-4">
-              <div class="media-body">
-                <h5 class="mt-0 mb-1">10 gastos que debes evitar</h5>
-                <p class="menu1">
-                  Aunque el 66% de los adultos recibió educación para el ahorro, apenas el 44% ahorra de manera fomal.
-                </p>
-              </div>
-              <img class="ml-5"  src="./images/blog2.png" alt="Manos estrechadas con guantes">
-            </li>
-            <hr>
-            <li class="media">
-              <div class="media-body mr-6">
-                <h5 class="mt-0 mb-1">10 gastos que debes evitar</h5>
-                <p class="menu1 ">
-                  Aunque el 66% de los adultos recibió educación para el ahorro, apenas el 44% ahorra de manera fomal.
-                </p>  
-              </div>
-              <img class="ml-5" src="./images/blog3.png" alt="Mano entregando tarjeta de credito mastercard">
-            </li>
-          </ul>
+        <div id="controls" class="row justify-content-between ">
+          <a href="#" class="col-4 previous round text-center">
+            <img src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
+          </a>
+          <a href="#" class="col-4 next round text-center">
+            <img class="flipped" src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
+          </a>
         </div>
+      </div>
+      <!-- Breack  -->
+      <div class="w-100"></div>
+      <p>
+        Tu dinero se invierte de la forma más eficiente de acuerdo al perfil
+        de riesgo asignado por nuestro RoboAdvisor.
+      </p>
+    </div>
+
+
+    <div id="blog" class="row">
+      <div class="generalCard">
+        <ul class="list-unstyled">
+          <li class="media">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">10 gastos que debes evitar</h5>
+              <p class="menu1">
+                Aunque el 66% de los adultos recibió educación para el ahorro, apenas el 44% ahorra de manera fomal.
+              </p>
+            </div>
+            <img class="ml-5" src="./images/blog1.png" alt="Mano sacando dolares de la billetera frente al computador">
+          </li>
+          <hr>
+          <li class="media my-4">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">10 gastos que debes evitar</h5>
+              <p class="menu1">
+                Aunque el 66% de los adultos recibió educación para el ahorro, apenas el 44% ahorra de manera fomal.
+              </p>
+            </div>
+            <img class="ml-5" src="./images/blog2.png" alt="Manos estrechadas con guantes">
+          </li>
+          <hr>
+          <li class="media">
+            <div class="media-body mr-6">
+              <h5 class="mt-0 mb-1">10 gastos que debes evitar</h5>
+              <p class="menu1 ">
+                Aunque el 66% de los adultos recibió educación para el ahorro, apenas el 44% ahorra de manera fomal.
+              </p>
+            </div>
+            <img class="ml-5" src="./images/blog3.png" alt="Mano entregando tarjeta de credito mastercard">
+          </li>
+        </ul>
+      </div>
     </div>
 
     <!-- partial -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
-  </body>
+</body>
+
 </html>
