--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <div class="col card generalCard">
           <img src="./images/Computer.png" alt="Computer" />
-          <div class="card-body">
+          <div class="card-body ">
             MacBook Pro
           </div>
           <hr>
@@ -130,6 +130,7 @@
 
       <div id="portfolioView" class="row generalCard">
         <div id="HoldingDonut" class="col-5">
+          <canvas id="doughnut-chart" width="100%" height="100%"></canvas>
           <!-- Donnut Using Chart.js is Know like a Pie -->
         </div>
         <div id="HoldingDescription" class="col-7">
@@ -148,10 +149,10 @@
             Depósito a la fija 
           </p>
           <div id="controls" class="row justify-content-between ">
-            <a href="#" class="col-4 previous round text-center">
+            <a href="#" class="previous round text-center">
               <img src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
             </a>
-            <a href="#" class="col-4 next round text-center">
+            <a href="#" class="next round text-center">
               <img class="flipped" src="./icons/navigation/chevron_left_24px.png" alt="Previus Icon" />
             </a>
           </div>
@@ -204,6 +205,7 @@
     <!-- partial -->
     <script src='https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js'></script>
     <script type="text/javascript" src="js/progress.js"></script>
+    <script type="text/javascript" src="js/FICpie.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
     
   </body>
