--- a/index.html
+++ b/index.html
@@ -13,25 +13,40 @@
 
 <body>
   <!-- Menu Fixed with Notch -->
-  <div id="boom">
+  <div id="boom" >
     <!-- Notch -->
     <div id="menu-notch">
     </div>
     <div id="add-button">
+      <img src="https://vectr.com/macorreag/apGC19DlZ.svg?width=50&height=50&select=apGC19DlZpage0" alt="Añadir Ahorro"
+        height="100%" width="100%" />
     </div>
     <!-- end of Notch -->
     <div id="menu-overlay">
-      
+
       <div id="div-0" class="divition menu1">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Gnome-home.svg/60px-Gnome-home.svg.png"
-          alt="">
+        <svg width="35%" height="35%" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M3.5 9.5H0.5L10.5 0.5L20.5 9.5H17.5V17.5H11.5V11.5H9.5V17.5H3.5V9.5ZM15.5 7.69L10.5 3.19L5.5 7.69V15.5H7.5V9.5H13.5V15.5H15.5V7.69Z"
+            fill="#54D1ED" fill-opacity="0.3"/>
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M3.5 9.5H0.5L10.5 0.5L20.5 9.5H17.5V17.5H11.5V11.5H9.5V17.5H3.5V9.5ZM15.5 7.69L10.5 3.19L5.5 7.69V15.5H7.5V9.5H13.5V15.5H15.5V7.69Z"
+            fill="#A99DC6"  />
+          <defs>
+            <linearGradient id="paint0_linear" x1="10.5" y1="0.5" x2="10.5" y2="17.5" gradientUnits="userSpaceOnUse">
+              <stop stop-color="#2C52D8" stop-opacity="0" />
+              <stop offset="1" stop-color="#2C52D8" />
+            </linearGradient>
+          </defs>
+        </svg>
         <br>
         Inicio
       </div>
 
       <div id="div-1" class="divition menu1">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Gnome-home.svg/60px-Gnome-home.svg.png"
-          alt="">
+        <svg width="30%" height="30%" viewBox="0 0 19 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M0.25 2C0.25 1.17 0.92 0.5 1.75 0.5C2.58 0.5 3.25 1.17 3.25 2C3.25 2.83 2.58 3.5 1.75 3.5C0.92 3.5 0.25 2.83 0.25 2ZM0.25 8C0.25 7.17 0.92 6.5 1.75 6.5C2.58 6.5 3.25 7.17 3.25 8C3.25 8.83 2.58 9.5 1.75 9.5C0.92 9.5 0.25 8.83 0.25 8ZM1.75 12.5C0.92 12.5 0.25 13.18 0.25 14C0.25 14.82 0.93 15.5 1.75 15.5C2.57 15.5 3.25 14.82 3.25 14C3.25 13.18 2.58 12.5 1.75 12.5ZM18.75 15H4.75V13H18.75V15ZM4.75 9H18.75V7H4.75V9ZM4.75 3V1H18.75V3H4.75Z" fill="#A99DC6"/>
+        </svg>          
         <br>
         Historial
       </div>
@@ -41,15 +56,18 @@
       </div>
 
       <div id="div-3" class="divition menu1">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Gnome-home.svg/60px-Gnome-home.svg.png"
-          alt="">
+        <svg width="30%" height="30%" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5 0C4.98 0 0.5 4.48 0.5 10C0.5 15.52 4.98 20 10.5 20C16.02 20 20.5 15.52 20.5 10C20.5 4.48 16.02 0 10.5 0ZM5.57 16.28C6 15.38 8.62 14.5 10.5 14.5C12.38 14.5 15.01 15.38 15.43 16.28C14.07 17.36 12.36 18 10.5 18C8.64 18 6.93 17.36 5.57 16.28ZM10.5 12.5C11.96 12.5 15.43 13.09 16.86 14.83C17.88 13.49 18.5 11.82 18.5 10C18.5 5.59 14.91 2 10.5 2C6.09 2 2.5 5.59 2.5 10C2.5 11.82 3.12 13.49 4.14 14.83C5.57 13.09 9.04 12.5 10.5 12.5ZM10.5 4C8.56 4 7 5.56 7 7.5C7 9.44 8.56 11 10.5 11C12.44 11 14 9.44 14 7.5C14 5.56 12.44 4 10.5 4ZM9 7.5C9 8.33 9.67 9 10.5 9C11.33 9 12 8.33 12 7.5C12 6.67 11.33 6 10.5 6C9.67 6 9 6.67 9 7.5Z" fill="#A99DC6"/>
+          </svg>          
         <br>
         Mi perfil
       </div>
 
       <div id="div-4" class="divition menu1">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Gnome-home.svg/60px-Gnome-home.svg.png"
-          alt="">
+        <svg width="30%" height="30%" viewBox="0 0 17 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M2.5 0C1.4 0 0.5 0.9 0.5 2C0.5 3.1 1.4 4 2.5 4C3.6 4 4.5 3.1 4.5 2C4.5 0.9 3.6 0 2.5 0ZM14.5 0C13.4 0 12.5 0.9 12.5 2C12.5 3.1 13.4 4 14.5 4C15.6 4 16.5 3.1 16.5 2C16.5 0.9 15.6 0 14.5 0ZM6.5 2C6.5 0.9 7.4 0 8.5 0C9.6 0 10.5 0.9 10.5 2C10.5 3.1 9.6 4 8.5 4C7.4 4 6.5 3.1 6.5 2Z" fill="#A99DC6"/>
+          </svg>
+          
         <br>
         Más
       </div>
